# opencv-sample

./: README.md
facedetect-sample/: .clang-format  CMakeLists.txt  main.cpp
facedetect-sample/data/: lena.yuv
libyuv-sample/: CMakeLists.txt  ffplay.txt  libjpeg-turbo  libpng  libyuv  main.cpp  zlib
nv21-sample/: .clang-format  CMakeLists.txt  display_image.cpp  main_opencv.cpp  nv21_affine.c  nv21_affine_dpseek.c
nv21-sample/data/: convert.txt  katu_640x480.nv21  lena_512x512.nv21  lena_640x480.nv21  output_640x480.nv21  output_640x480_nocv.nv21  output_nocv_640x480.nv21  trumps_640x480.nv21
opencv-build/: b_x86_64.sh
